fix letter spacing bug

--- a/_sass/components.tile.scss
+++ b/_sass/components.tile.scss
@@ -38,6 +38,7 @@
     font-family: $sans;
     @include font(20px, 600, $lh-title);
     margin-bottom: 4px;
+    letter-spacing: $ls-heading;
 
     @include respond-min($ml) {
         font-size: toRem(28px);
