--- a/_sass/settings.variables.scss
+++ b/_sass/settings.variables.scss
@@ -34,7 +34,7 @@ $lh-title: 1.15;
 $lh-solid: 1;
 
 // letter spacings for headings
-$ls-heading: -0.017em;
+$ls-heading: -0.015em;
 
 
 
